codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---









• 处理中 (0s • esc 可中断)

• 已排队的后续消息
  ↳ Queued while /review is running.
    ⌥ + ↑ 编辑上一条排队消息

› 让 Codex 处理任何事情

  ? 查看快捷键                                                 剩余上下文 100%
