codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_buddy_pet_requires_show_when_hidden.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 279
expression: rendered
---
• 小伙伴现在藏起来了。 先用 `/buddy show` 让它回来。
