codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_copy_no_output_info_message.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• `/copy` 在首次 Codex 输出之前或回滚后不可用。
