codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_rename_prefilled_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
▌ 重 命 名 线 程
▌
▌ Current project title

按  enter 确 认 或 按  esc 返 回
