codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_side_requests_forked_side_question_while_task_running.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• 处理中 (0s • esc 中断)                                                        " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (20, " "), (22, " ")]
"                                                                                "
"                                                                                "
"› 让 Codex 帮你做任何事                                                         " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
"                                                                                "
"  gpt-5.5 默认                                                Side starting...  " Hidden by multi-width symbols: [(11, " "), (13, " ")]
